<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="1"
    android:background="@color/darker"
    app:cardElevation="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/recordsButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/records"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/trophy"
        app:layout_constraintStart_toStartOf="@+id/trophy"
        app:layout_constraintTop_toBottomOf="@+id/trophy" />

    <Button
        android:id="@+id/scoreButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/target"
        app:layout_constraintStart_toStartOf="@+id/target"
        app:layout_constraintTop_toBottomOf="@+id/target" />

    <Button
        android:id="@+id/profileButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/target"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person_icon"
        app:tint="@color/altWhite" />

    <ImageView
        android:id="@+id/trophy"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/target"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trophy"
        app:tint="@color/altWhite" />

    <ImageView
        android:id="@+id/target"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/target" />
</androidx.constraintlayout.widget.ConstraintLayout>